<resources>
    <string name="app_name">Shapes</string>
    <string name="button">UNDO</string>
    <string name="triangle">Triangle</string>
    <string name="circle">Circle</string>
    <string name="rect">Rect</string>
    <string name="move">Move</string>
    <string name="draw">Draw</string>

    <string-array name="colors">
        <item>000000</item>
        <item>D0021B</item>
        <item>F5A623</item>
        <item>F8E71C</item>
        <item>8B572A</item>
        <item>7ED321</item>
        <item>BD10E0</item>
        <item>9013FE</item>
        <item>4A90E2</item>
        <item>50E3C2</item>
        <item>B8E986</item>
    </string-array>
</resources>